speedtest-plotter/speedtest-plotter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-plotter
  labels:
    app: speedtest-plotter
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: speedtest-plotter
